<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_display_message">My Message</string>

    <!-- Database screen strings -->
    <string name="title_database_entry">Daily Entry</string>
    <string name="message_entry">Enter Three things</string>
    <string name="hint_entry_one">Entry one</string>
    <string name="hint_entry_two">Entry two</string>
    <string name="hint_entry_three">Entry three</string>
    <string name="title_notes">Notes:</string>
    <string name="hint_notes">Enter notes</string>
    <string name="title_rating">Rating: </string>
    <string name="hint_rating">Enter Rating</string>
    <string name="button_insert">Insert</string>
    <string name="day">Today\'s Date</string>
    <string name="calendar">Calendar</string>
    <string name="database">Database</string>
    <string name="user_image">User image</string>
    <string name="notes">Notes</string>
    <string name="graph">Graph</string>
    <string name="note_hint">Write notes here.</string>
    <string name="good_things">Good Things</string>
    <string name="rating">Rating: 1</string>
    <string name="cal">Calendar</string>
    <string name="notedes">Write anything about your day here.</string>
    <string name="main">Daily Entry</string>
    <string name="select">Select Image</string>
    <string name="notification_settings">Settings</string>

    <array name="img_id_arr">
        <item>@drawable/rating_1</item>
        <item>@drawable/rating_2</item>
        <item>@drawable/rating_3</item>
        <item>@drawable/rating_4</item>
        <item>@drawable/rating_5</item>
        <item>@drawable/rating_6</item>
        <item>@drawable/rating_7</item>
        <item>@drawable/rating_8</item>
        <item>@drawable/rating_9</item>
        <item>@drawable/rating_10</item>
    </array>
</resources>
