<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".InputScreen">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/calendar"
        app:showAsAction="never"
        android:onClick="goToCalendar"
        />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/graph"
        android:onClick="goToGraph"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/main"
        android:onClick="goToMain"
        app:showAsAction="never"
        />
</menu>
