<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="@dimen/activity_vertical_margin"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:showIn="@layout/database_activity">

    <!-- Message Entry -->
    <TextView
        android:id="@+id/text_view_message_entry"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/message_entry"
        android:layout_row="0"
        android:layout_column="1" />


    <!-- Entry One -->
    <TextView
        android:id="@+id/text_view_entry_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="1. "
        android:layout_row="1"
        android:layout_column="0" />
    <EditText
        android:id="@+id/entry_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:hint="@string/hint_entry_one"
        android:layout_row="1"
        android:layout_column="1" />


    <!-- Entry Two -->
    <TextView
        android:id="@+id/text_view_entry_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="2. "
        android:layout_row="2"
        android:layout_column="0" />
    <EditText
        android:id="@+id/entry_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:hint="@string/hint_entry_two"
        android:layout_row="2"
        android:layout_column="1" />


    <!-- Entry Three -->
    <TextView
        android:id="@+id/text_view_entry_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="3. "
        android:layout_row="3"
        android:layout_column="0" />
    <EditText
        android:id="@+id/entry_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:hint="@string/hint_entry_three"
        android:layout_row="3"
        android:layout_column="1" />


    <!-- Notes -->
    <TextView
        android:id="@+id/text_view_notes_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:hint="@string/title_notes"
        android:layout_row="5"
        android:layout_column="0" />
    <EditText
        android:id="@+id/notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:hint="@string/hint_notes"
        android:layout_row="5"
        android:layout_column="1" />

    <!-- Rating entry -->
    <TextView
        android:id="@+id/text_view_rating_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/title_rating"
        android:layout_row="6"
        android:layout_column="0" />
    <EditText
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:hint="@string/hint_rating"
        android:layout_row="6"
        android:layout_column="1" />

    <!-- Image Entry -->
    <Button
        android:id="@+id/image_selector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select Image"
        android:layout_row="7"
        android:layout_column="1"
        android:onClick="getImage"/>
    <ImageView
        android:id="@+id/image_view_database"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_row="9"
        android:layout_column="1" />

    <!--Submit to database -->
    <Button
        android:id="@+id/insert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_insert"
        android:layout_row="8"
        android:layout_column="1"
        android:onClick="insertRow" />

    <!-- Date entry -->
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:hint="month"
        android:id="@+id/editText_month"
        android:layout_row="0"
        android:layout_column="2"/>
    <EditText
        android:layout_width="99dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:hint="day"
        android:id="@+id/editText_day"
        android:layout_row="0"
        android:layout_column="4"/>
</GridLayout>