<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="false">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_input"
    style="?android:attr/buttonBarStyle"
    android:layout_marginTop="20dp"
    android:paddingBottom="50dp"
    >


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="30dp"
        android:id="@+id/linearLayout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:id="@+id/slider_rating"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingTop="4dp" />
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Notes"
        android:id="@+id/textView"
        android:paddingTop="40dp"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/notes"
        android:layout_below="@+id/textView"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"
        android:minHeight="50dp"
        android:background="@drawable/text_box"
        android:hint="@string/notedes"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="3 Good Things"
        android:id="@+id/title2"
        android:layout_below="@+id/notes"
        android:layout_centerHorizontal="true"
        android:paddingTop="30dp"/>
    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/good"
        android:layout_below="@+id/title2"
        android:layout_centerHorizontal="true"
        android:minHeight="20dp"
        android:background="@drawable/text_box"
        android:singleLine="true"
        android:textSize="16sp"
        android:hint="Something good that happened today."/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText3"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="1."
        android:layout_marginBottom="20dp"
        android:layout_alignBottom="@+id/good"
        android:layout_toLeftOf="@+id/good"
        android:layout_toStartOf="@+id/good" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/good2"
        android:background="@drawable/text_box"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/good"
        android:layout_alignLeft="@+id/good"
        android:singleLine="true"
        android:layout_alignStart="@+id/good"
        android:textSize="16sp"
        android:hint="Another good thing."/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText5"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="2."
        android:layout_alignTop="@+id/good2"
        android:layout_toLeftOf="@+id/good2"
        android:layout_toStartOf="@+id/good2" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/good3"
        android:background="@drawable/text_box"
        android:layout_below="@+id/good2"
        android:layout_toRightOf="@+id/editText5"
        android:layout_toEndOf="@+id/editText5"
        android:singleLine="true"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:hint="Another good thing."/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/editText7"
        android:text="3."
        android:layout_alignTop="@+id/good3"
        android:layout_toLeftOf="@+id/good3"
        android:layout_toStartOf="@+id/good3" />

    <!-- Image Entry -->
    <ImageButton
        style="?android:buttonBarButtonStyle"
        android:id="@+id/image_selector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select"
        android:onClick="getImage"
        android:src="@drawable/camera_icon"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/good3"
        android:layout_toStartOf="@+id/title2"/>
    <ImageView
        android:id="@+id/image_view_database"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:padding="2dp"
        android:background="#4fa5d5"
        android:contentDescription="User image"
        android:layout_below="@+id/good3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"/>

    <!--Submit to database -->
    <Button
        style="?android:buttonBarButtonStyle"
        android:id="@+id/insert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_insert"
        android:onClick="insertRow"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/good3"
        android:layout_alignEnd="@+id/good3"
        android:background="@drawable/text_box"/>

    <SeekBar
        android:layout_width="262dp"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
</ScrollView>
