<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="false">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    style="?android:attr/buttonBarStyle"
    android:layout_marginTop="20dp">

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:paddingTop="30dp"
    android:id="@+id/linear1">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/database"
        android:onClick="goToDatabaseScreen"
        style="?android:attr/buttonBarButtonStyle"
        android:background="@drawable/text_box"/>

</LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear1"
        android:layout_centerHorizontal="true"
        android:paddingTop="10dp"
        android:id="@+id/linearLayout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:id="@+id/slider_rating"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingTop="4dp" />
        <SeekBar
            android:layout_width="262dp"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar"
            />
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Notes"
        android:id="@+id/textView"
        android:paddingTop="40dp"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:minHeight="50dp"
        android:background="@drawable/text_box"
        android:hint="@string/notedes"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="3 Good Things"
        android:id="@+id/title2"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true"
        android:paddingTop="30dp"/>
    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:layout_below="@+id/title2"
        android:layout_centerHorizontal="true"
        android:minHeight="20dp"
        android:background="@drawable/text_box"
        android:hint="Something good that happened today."/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText3"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="1."
        android:layout_marginBottom="20dp"
        android:layout_alignBottom="@+id/editText2"
        android:layout_toLeftOf="@+id/editText2"
        android:layout_toStartOf="@+id/editText2" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/good2"
        android:background="@drawable/text_box"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/editText2"
        android:layout_alignLeft="@+id/editText2"
        android:layout_alignStart="@+id/editText2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText5"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="2."
        android:layout_alignTop="@+id/good2"
        android:layout_toLeftOf="@+id/good2"
        android:layout_toStartOf="@+id/good2" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/good3"
        android:background="@drawable/text_box"
        android:layout_below="@+id/good2"
        android:layout_toRightOf="@+id/editText5"
        android:layout_toEndOf="@+id/editText5"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/editText7"
        android:text="3."
        android:layout_alignTop="@+id/good3"
        android:layout_toLeftOf="@+id/good3"
        android:layout_toStartOf="@+id/good3" />


</RelativeLayout>
</ScrollView>